<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sectool.securenotes.setPass">

    <LinearLayout
        android:id="@+id/linearLayoutSetPass"
        android:layout_width="368dp"
        android:layout_height="293dp"
        android:layout_marginBottom="210dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSetPass2"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/treb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/txtMin1Number"
            android:textColor="?attr/colorError"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/treb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/txtZaglavBukviy"
            android:textColor="?attr/colorError"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/treb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/txtMin6Symbol"
            android:textColor="?attr/colorError"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorLink="@android:color/black"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorLink="@android:color/black"
            android:textCursorDrawable="@null" />

        <Button
            android:id="@+id/btnSetPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/holo_blue_dark"
            android:onClick="setPassClick"
            android:text="@string/txtNext"
            android:textColor="@android:color/background_light" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
